tests/baselines/reference/stringLiteralType(strict=true).errors.txt
stringLiteralType.ts(3,10): error TS7010: 'f', which lacks return-type annotation, implicitly has an 'any' return type.
stringLiteralType.ts(4,10): error TS7010: 'f', which lacks return-type annotation, implicitly has an 'any' return type.


==== stringLiteralType.ts (2 errors) ====
    var x: 'hi';
    
    function f(x: 'hi');
             ~
!!! error TS7010: 'f', which lacks return-type annotation, implicitly has an 'any' return type.
    function f(x: string);
             ~
!!! error TS7010: 'f', which lacks return-type annotation, implicitly has an 'any' return type.
    function f(x: any) {
    }